--- a/solutions/01-hello_world/CMakeLists.txt
+++ b/solutions/01-hello_world/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.5)
 project(HelloWorld)
 
 # Generate executable.
-add_executable(HelloWorld hello_world.cpp)
+add_executable(hello_world hello_world.cpp)
